actualización con apuntes